添加实验室地图展示单表

--- a/src/main/webapp/WEB-INF/pages/layout/ulab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/ulab.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 <title> ${title!'全球实验室互联互通'}</title>
 
-<script type="text/javascript" src="${contextPath!}/static/js/jquery.min.js"></script>
+<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 </head>
 <body class="zh_CN">
 
