--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -10,7 +10,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
 body,html{
   width: 100%;
   height: 100%;
-  font-family: "Microsoft yahei", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Microsoft yahei", "微软雅黑", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, serif;
 }
 fieldset, img {
   border: 0;
@@ -36,7 +36,14 @@ a {
 a:hover {
   text-decoration: none;
 }
-
+h3 {
+  display: block;
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  /*font-weight: bold;*/
+}
 
 /*定义公共样式*/
 
@@ -73,7 +80,7 @@ a:hover {
   display: flex;
   width:3186px;
   height:100%;
-  background: url("../img/bg_star.png") ;
+  background: url("../img/bg_star2.jpg") ;
   background-size: 100%;
 }
 @media (min-width: 13000px) {
@@ -84,7 +91,7 @@ a:hover {
 
 #content>div{
   position: relative;
-  outline: 1px dashed #ccc;
+  /*outline: 1px dashed #ccc;*/
   outline-offset: -1px;
 }
 #l{
@@ -101,7 +108,9 @@ a:hover {
   width:100%;
   height:100%;
   z-index: 999999;
-  /*background: blue;*/
+/*   background: url("../img/bg_star2.jpg"); */
+  background-color:#000;
+  background-size: 100% 100%;
 }
 
 video{
