--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -12,11 +12,12 @@
 }
 #l .switchGroup{
     flex:20;
+    margin:0 1%;
 }
 
 /*平面地图切换的大区域，先分上下，上面再分左中右，左右再分上下*/
 #l .switch.flat{
-    padding:0 1%;
+    /*padding:0 1%;*/
     display: none;
     flex-direction: column;
 }
@@ -36,9 +37,11 @@
     flex:1;
     display: flex;
     flex-direction: column;
+    margin-bottom: -8%;
 }
 #l .flat .mapArea{/*中间大地图*/
     flex:3;
+    position: relative;
 }
 
 #l .flat .flat-left>div,
@@ -48,15 +51,24 @@
     /*outline: 1px solid rgba(238, 196, 2, 0.38);*/
     outline-offset: -1px;
 }
+#l .flat #maskSphere{
+    position: absolute;
+    height: 63%;
+    width: 80%;
+    left: 11%;
+    top: 19%;
+    /*border-top: 2px solid rgba(17, 115, 164, -0.62);*/
+    border-radius: 50%;
+    background: linear-gradient(to bottom,rgba(17, 115, 164,0.2)10%,rgba(0,0,0,0) 36%);}
 
 
-
-/*球形地图布局*/
+/*球形地图切换的大区域，先分左中右，左右再分上下*/
 #l .switch.sphere{
+
     display: flex;
 }
 #l .switch.sphere>div{
-    outline: 1px solid #ee8004;
+    /*outline: 1px solid #ee8004;*/
 }
 
 #l .sphere .sphere-left,
@@ -66,7 +78,8 @@
     flex-direction: column;
 }
 #l .sphere .mapArea{
-    flex:3;
+    flex:2.5;
+    padding-top: 4%;
 }
 #l .sphere .mapArea iframe{
     height: 100%;
@@ -75,7 +88,7 @@
 #l .sphere .sphere-left>div,
 #l .sphere .sphere-right>div{
     padding:3%;
-    outline: 1px solid rgba(238, 196, 2, 0.38);
+    /*outline: 1px solid rgba(238, 196, 2, 0.38);*/
     outline-offset: -1px;
 }
 #l .sphere [class$=top],
@@ -90,9 +103,27 @@
     text-align: center;
 }
 #l h1{
-    margin: 1em auto 0;
+    margin: 1% auto 0;
+    position: relative;
+    padding: 1% 0;
+    padding-left: 6%;
     font-size: 1.6em;
     color: #66CCFE;
+    background: url(../img/bg_title.png);
+    background-size: 77% 100%;
+    background-position-x: 50%;
+    background-repeat: no-repeat;
+}
+#l header .mainLogo{
+    display: inline-block;
+    position: absolute;
+    width: 5%;
+    height: 4%;
+    top: 3%;
+    left: 37%;
+    background: url(../img/logo_haier.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 #l .btnGroup{
     text-align: right;
@@ -105,44 +136,101 @@
     height: 2em;
 }
 
-/*
-#l .numberInfo{
-    overflow: hidden;
-}
-#l .numberInfo .item{
-    text-align: center;
-    width:25%;
-    color: #fff;
-    transform: translateX(-50%);
-    float: left;
-}
-
-#l .numberInfo .item:nth-of-type(1){
-    margin-left: 25%;
-}
-
-#l .numberInfo .item h3{
-    text-align: center;
-    font-size: .7em;
-}
-#l .numberInfo .item .nb{
-    font-family: DIGITAL-Regular;
-    font-size: 2em;
-    font-style: italic;
-    color: orange;
-}
-*/
 
 #l .switch{
     height:100%;
 }
 #l .mapArea{
-    width:60%;
+    /*width:60%;*/
     height: 100%;
 }
 #l .sphere .mapArea,
 #l .flat .mapArea{
     height:100%;
+}
+#l .sphere-left-top .chartBorder,
+#l .sphere-left-bottom .chartBorder,
+#l .sphere-right-top .chartBorder{
+    position: relative;
+    height: 95%;
+    border-style: solid;
+    border-image: url("../img/chartBorder_noTitle.png") 120 52 30 / 13% 6% 6% ;
+}
+#l .sphere-left-top .myChart{
+    height: 60%;
+    margin: 26% 3%;
+/*     background: url("../img/sphereLT.png"); */
+    background: url("../img/5dz.png");
+    background-size: 100% 100%;
+}
+#l .sphere-left-bottom iframe{
+    margin-top: 15%;
+    height: 90%;
+}
+#l .sphere-right-bottom .chartBorder{
+    padding:0 5%;
+}
+#l .sphere-right-top .chartBorder .myChart{
+    height: 90%;
+}
+#l .sphere .chartBorder h3{
+    position: absolute;
+    width: 100%;
+    top: 1.8%;
+    font-weight: normal;
+    color: #6cf;
+    margin-top: 3%;
+    text-align: center;
+}
+#l .sphere-right-bottom .chartBorder h3{
+    position: relative;
+    width: auto;
+    left: -16%;
+    top: -0.5%;
+    font-size: 120%;
+    font-weight: normal;
+    color: #fff;
+}
+
+#l .sphere .chartBorder h3 strong{
+    font-size: 125%;
+    font-weight: normal;
+    color: #f93;
+}
+#l .sphere-left-bottom .chartBorder .myChart,
+#l .sphere-right-top .chartBorder .myChart{
+    height:100%;
+}
+#l .sphere-right-bottom .chartBorder>ul,
+#l .sphere-right-bottom .chartBorder>.scroll>ul{
+    margin-top: 3%;
+    padding: 0 3%;
+    overflow: hidden;
+    font-size: 75%;
+    color: #6cf;
+    text-align: center;
+}
+#l .sphere-right-bottom .chartBorder>ul.header{
+    margin-top: 7%;
+    border-bottom: 1px solid #6cf;
+    box-shadow: 0 2px 3px -2px;
+}
+#l .sphere-right-bottom .chartBorder>.scroll{
+    height: 9.5em;
+    overflow: hidden;
+    margin: 5% 0;
+}
+#l .sphere-right-bottom .chartBorder>ul>li,
+#l .sphere-right-bottom .chartBorder>.scroll>ul>li{
+    padding: 6.3% 0;
+}
+#l .sphere-right-bottom .chartBorder>ul>li>ul{
+    overflow: hidden;
+}
+#l .sphere-right-bottom .chartBorder>ul.header>li,
+#l .sphere-right-bottom .chartBorder ul>li>ul>li{
+    width:33%;
+    float: left;
 }
 
 
@@ -150,10 +238,10 @@
 #l .flat iframe{
     width:100%;
     height:100%;
+    transform: rotateX(30deg);
 }
 
 #l .flat-footer{
-    /*display: flex;*/
     margin:0 auto;
     height:100%;
     width:100%;
@@ -161,11 +249,10 @@
 
 #l .flat-footer .legend{
     position: relative;
-    /*flex: 6;*/
     text-align: center;
     margin: 0 auto;
     height: 100%;
-    width: 44%;
+    width: 51%;
     color: #999;
     background: url(../img/nav-border.png);
     background-size: 100% 100%;
@@ -174,24 +261,24 @@
 #l .flat-footer .legend-r{
     cursor: pointer;
     position: absolute;
-    height: 53%;
+    height: 50%;
     width: 11%;
-    line-height: 480%;
+    line-height: 550%;
     font-size: 75%;
     text-align: center;
-    background-size: 100%;
-    top: 12.6%;
+    background-size: 100% 100%;
+    top: 14.6%;
     z-index: 10;
 }
 #l .flat-footer .legend-l{
     cursor: pointer;
     color: #00e673;
-    background-image: url(../img/navSwitch_on.png) ;
+    background-image: url(../img/ico/navSwitch_on.png) ;
     left: 0;
 }
 #l .flat-footer .legend-r{
     color: #6cf;
-    background-image: url(../img/navSwitch_off.png) ;
+    background-image: url(../img/ico/navSwitch_off.png) ;
     right: 0;
 }
 
@@ -199,20 +286,23 @@
     display: inline-block;
     position: relative;
     top: .2em;
-    width: 1em;
+    width: 1.5em;
     height: 1em;
-    background-size: 100%;
+    background-position: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: .2em;
 }
 #l .flat-footer .legend .selectAll{
-    color: #00e673;
-    padding-top: .5%;
-    font-size: 75%;
+    color: #6cf;
+    padding-top: 1%;
+    font-size: 90%;
 }
 #l .flat-footer .legend .selectAll label{
     cursor: pointer;
 }
 #l .flat-footer .legend .selectAll .icon{
-    background-image: url("../img/navSelectAll_on.png");
+    background-image: url("../img/ico/navSelectAll_on.png");
 }
 #l .flat-footer .legend .labLine{
     margin-top: 1.5%;
@@ -220,93 +310,162 @@
 #l .flat-footer .legend ul.lab,
 #l .flat-footer .legend ul.line{
     text-align: center;
-    /*position: relative;*/
-    /*top: 8%;*/
 }
 #l .flat-footer .legend ul.legend-bottom{
-    position: relative;
-    top:31%
+    position: absolute;
+    top: 80%;
+    width: 100%;
 }
 #l .flat-footer .legend ul.legend-bottom li a{
     color: #6cf;
 }
 #l .flat-footer .legend ul li{
     display: inline-block;
-    margin-right: 3%;
+    margin: 0 1%;
 }
 #l .flat-footer .legend ul li a{
-    font-size: 75%;
+    font-size: 90%;
     color: #999;
 }
 #l .flat-footer .legend ul li.active a{
     color: #00e673;
 }
-
+#l .flat-footer .legend ul.lab li:nth-child(1).active a{
+    color: #00e673;
+}
+#l .flat-footer .legend ul.lab li:nth-child(2).active a{
+    color: #fbf679;
+}
+#l .flat-footer .legend ul.lab li:nth-child(3).active a{
+    color: #f66;
+}
+#l .flat-footer .legend ul.lab li:nth-child(4).active a{
+    color: #0ff;
+}
 #l .flat-footer .legend ul.lab li:nth-child(1) a .icon{
-    background-image: url("../img/navDevlp_on.png");
+    background-image: url("../img/ico/navDevlp_on.png");
 }
 #l .flat-footer .legend ul.lab li:nth-child(2) a .icon{
-    background-image: url("../img/navCenter_off.png");
+    background-image: url("../img/ico/navCenter_on.png");
 }
 #l .flat-footer .legend ul.lab li:nth-child(3) a .icon{
-    background-image: url("../img/navModule_off.png");
+    background-image: url("../img/ico/navModule_on.png");
 }
 #l .flat-footer .legend ul.lab li:nth-child(4) a .icon{
-    background-image: url("../img/navFac_off.png");
+    background-image: url("../img/ico/navFac_on.png");
 }
 
-
+#l .flat-footer .legend ul.line li:nth-child(1).active a{
+    color: #6fc;
+}
+#l .flat-footer .legend ul.line li:nth-child(2).active a{
+    color: #0af;
+}
+#l .flat-footer .legend ul.line li:nth-child(3).active a{
+    color: #01da92;
+}
+#l .flat-footer .legend ul.line li:nth-child(4).active a{
+    color: #0060ff;
+}
+#l .flat-footer .legend ul.line li:nth-child(5).active a{
+    color: #00a870;
+}
+#l .flat-footer .legend ul.line li:nth-child(6).active a{
+    color: #f93;
+}
+#l .flat-footer .legend ul.line li:nth-child(7).active a{
+    color: #ff9;
+}
+#l .flat-footer .legend ul.line li:nth-child(1) a .icon{
+    background-image: url("../img/ico/line_bl_on.png");
+}
+#l .flat-footer .legend ul.line li:nth-child(2) a .icon{
+    background-image: url("../img/ico/line_xd_on.png");
+}
+#l .flat-footer .legend ul.line li:nth-child(3) a .icon{
+    background-image: url("../img/ico/line_jk_on.png");
+}
+#l .flat-footer .legend ul.line li:nth-child(4) a .icon{
+    background-image: url("../img/ico/line_sk_on.png");
+}
+#l .flat-footer .legend ul.line li:nth-child(5) a .icon{
+    background-image: url("../img/ico/line_rsq_on.png");
+}
+#l .flat-footer .legend ul.line li:nth-child(6) a .icon{
+    background-image: url("../img/ico/line_cd_on.png");
+}
+#l .flat-footer .legend ul.line li:nth-child(7) a .icon{
+    background-image: url("../img/ico/line_ds_on.png");
+}
 
 
 /*每块图表的样式*/
-#l .flat .flat-left>div .chartBorder,
-#l .flat .flat-right>div .chartBorder{/*每块图表边框*/
+#l .sphere .sphere-right-bottom .chartBorder,
+#l .flat-left>div .chartBorder,
+#l .flat-right>div .chartBorder{/*每块图表边框*/
     position: relative;
-    height:100%;
+    height:95%;
     border-style: solid;
     border-image: url("../img/chartBorder.png") 120 52 30 / 13% 6% 6% ;
 }
-#l .flat .flat-left>div>div h3,
-#l .flat .flat-right>div>div h3{
-    position: absolute;
-    left: 23%;
-    top: 1.1%;
-    /*font-size: 100%;*/
+#l .flat-left>div>div h3,
+#l .flat-right>div>div h3{
+    position: relative;
+    display: inline-block;
+    font-size: 118%;
+    left: 36%;
+    padding-top: 1%;
     font-weight: normal;
     color: #fff;
+    transform: translate(-50%, 14%);
 }
-#l .flat .flat-left>div .chartBorder .myChart,
-#l .flat .flat-right>div .chartBorder .myChart{
+#l .flat-left>div .chartBorder .myChart,
+#l .flat-right>div .chartBorder .myChart{
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
 }
 #l .flat .chartBorder h4{
-    position: absolute;
-    left: 2%;
-    width: 87%;
-    padding: 1.2% 2%;
-    margin: 12% 3% 0;
+    text-align: center;
+    margin: 8% 2% 0;
+    padding: 1% 0;
     color: #66ccff;
-    font-size: 60%;
-    line-height: 182%;
+    font-size: 66%;
+    line-height: 180%;
     background-color: rgba(102,204,255,.15);
 }
+
 #l .flat .chartBorder h4 strong{
     color: #fff;
     font-size: 160%;
     font-weight: normal;
 }
+#l .flat-left-bottom .myChart{
+    height: 72%;
+    margin-bottom: 5%;
+}
+#l .flat-right-top .myChart{
+    height: 80%;
+    margin-bottom: 5%;
+}
+#l .flat-right-bottom .myChart{
+    height: 65%;
+    margin-bottom: 5%;
+}
+
 #l .flat .chartBorder ul{
     position: relative;
-    margin: 0 24%;
-    top: 30%;
-    font-size: 55%;
+    margin: 1% 15%;
+    top: 3%;
+    height: 72%;
+    font-size: 63%;
     color: #6cf;
 }
 #l .flat .chartBorder ul li{
-    margin-bottom: 2px;
-    line-height: 180%;
+    margin-bottom: 2%;
+    line-height: 201%;
+    height: 11%;
 }
+
 #l .flat-left-top ul li .icon{
     display: inline-block;
     position: relative;
@@ -317,29 +476,30 @@
     background-size: 100% 100%;
 }
 
-#l .flat .chartBorder ul li:nth-of-type(1) .icon{
-    background-image: url("../img/line_bl.png");
+#l .flat-left-top ul li:nth-of-type(1) .icon{
+    background-image: url("../img/ico/line_bl.png");
 }
-#l .flat .chartBorder ul li:nth-of-type(2) .icon{
-    background-image: url("../img/line_xd.png");
+#l .flat-left-top ul li:nth-of-type(2) .icon{
+    background-image: url("../img/ico/line_xd.png");
 }
-#l .flat .chartBorder ul li:nth-of-type(3) .icon{
-    background-image: url("../img/line_jk.png");
+#l .flat-left-top ul li:nth-of-type(3) .icon{
+    background-image: url("../img/ico/line_jk.png");
 }
-#l .flat .chartBorder ul li:nth-of-type(4) .icon{
-    background-image: url("../img/line_sk.png");
+#l .flat-left-top ul li:nth-of-type(4) .icon{
+    background-image: url("../img/ico/line_sk.png");
 }
-#l .flat .chartBorder ul li:nth-of-type(5) .icon{
-    background-image: url("../img/line_rsq.png");
+#l .flat-left-top ul li:nth-of-type(5) .icon{
+    background-image: url("../img/ico/line_rsq.png");
 }
-#l .flat .chartBorder ul li:nth-of-type(6) .icon{
-    background-image: url("../img/line_cd.png");
+#l .flat-left-top ul li:nth-of-type(6) .icon{
+    background-image: url("../img/ico/line_cd.png");
 }
-#l .flat .chartBorder ul li:nth-of-type(7) .icon{
-    background-image: url("../img/line_ds.png");
+#l .flat-left-top ul li:nth-of-type(7) .icon{
+    background-image: url("../img/ico/line_ds.png");
 }
 
 #l .flat .chartBorder ul li .number {
+    height: 90%;
     background-image: url(../img/bgNumber.png);
     background-size: 95% 100%;
     background-repeat: no-repeat;
