--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -117,3 +117,31 @@ video{
   position: relative;
 }
 
+@media screen and (max-width: 960px){
+  body{
+    font-size: 11.2px;
+  }
+}
+@media screen and (max-width: 1366px){
+  body{
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 1440px){
+  body{
+    font-size: 16.8px;
+  }
+}
+
+@media screen and (max-width: 1920px){
+  body{
+    font-size: 22.5px;
+  }
+}
+
+@media screen and (max-width: 2560px){
+  body{
+    font-size: 30px;
+  }
+}
