--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -1,11 +1,186 @@
-<div class="param_box">
-  <dl class="param no_extra" style="min-width:182px;">
-    <dt class="param_title">互动管理 </dt>
-    <dd class="param_item ${param=='meetingrecord'?'selected':''}"" > <a href="/mp/meetingrecord">会议列表</a> </dd>
-    <dd class="param_item ${param=='docrecord'?'selected':''}" style=" margin-bottom:10px"> <a href="/mp/docrecord">参会列表</a> </dd>
-    <dd class="param_item ${param=='salesMeeting'?'selected':''}" style=" margin-bottom:10px"> <a href="/mp/meetingrecord/salesMeeting">代表开会列表</a> </dd>
-    <dd class="param_item ${param=='statisticsmeeting'?'selected':''}" > <a  href="/mp/statistics/meeting">会议情况分析</a> </dd>
-    <dd class="param_item ${param=='statisticsdoctor'?'selected':''}" > <a href="/mp/statistics/doctor">医师参会统计</a> </dd>
-    <dd class="param_item ${param=='lottery'?'selected':''}" > <a href="/mp/lottery">抽奖配置</a> </dd>
-  </dl>
-</div>
+ <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <title>U-lab全球互联数据中心</title>
+    <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
+    <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
+</head>
+ <div id="l">
+        <header>
+            <span class="mainLogo"></span>
+            <h1>海尔全球实验室数据中心</h1>
+            <h1>Haier U-lab Data Center</h1>
+        </header>
+        <div class="btnGroup">
+            <img class="sphere" src="${contextPath!}/static/img/ico/btn_sphere_on.png">
+            <img class="sphere" src="${contextPath!}/static/img/ico/btn_flat_off.png">
+        </div>
+        <div class="switchGroup">
+            <div class="switch sphere">
+                <div class="sphere-left">
+                    <div class="sphere-left-top">
+                        <div class="chartBorder">
+                            <h3>覆盖区域</h3>
+                            <h4 class="noBG"><strong>5</strong>大洲
+                                <strong>18</strong>个国家
+                                <strong>27</strong>工业园区
+                            </h4>
+                            <div class="myChart"></div>
+                        </div>
+                    </div>
+                    <div class="sphere-left-bottom">
+                        <div class="chartBorder">
+                            <h3>覆盖产品</h3>
+                            <h4 class="noBG"><strong>50+</strong>类家电产品</h4>
+                            <div class="myChart">
+                                <iframe src="${contextPath!}/lab/wordCloud"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mapArea">
+                    <h2>数据互联 实时共享 提效增值</h2>
+                    <!--球体地图位置-->
+                    <iframe src="${contextPath!}/lab/sphereMap"></iframe>
+                </div>
+                <div class="sphere-right">
+                    <div class="sphere-right-top">
+                        <!--
+                                                <div class="chartBorder">
+                                                    <h3>实验室总数及分布</h3>
+                                                    <h4>互联实验室数<strong id="lab_all_count_1">388</strong></h4>
+                                                    <div class="myChart"></div>
+                                                </div>
+                        -->
+                        <div class="chartBorder">
+                            <h3>实验室总数及分布</h3>
+                            <h4 class="noBG">实验室总数： <strong id="lab_all_count"> 0 </strong></h4>
+                            <ul id="pro_line">
+                            </ul>
+                            <div class="myChart"></div>
+                        </div>
+
+                    </div>
+                    <div class="sphere-right-bottom">
+                        <div class="chartBorder">
+                            <h3>实验室信息</h3>
+                            <h4 class="noBG">互联实验室： <strong> 376 </strong></h4>
+                            <ul class="header">
+                                <li>实验室名称</li>
+                                <li>所在地</li>
+                                <li>类型</li>
+                            </ul>
+                            <div class="scroll">
+                                <ul>
+                                    ##for(type in labInfo){
+                                    <li>
+                                        <ul>
+                                            <li>${type.title!}</li>
+                                            <li>${type.location!}</li>
+                                            <li>${type.lab_type!}</li>
+                                        </ul>
+                                    </li>
+                                    ##}
+
+
+                                </ul>
+                                <ul class="scrollAux"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="switch flat">
+                <div class="flat-main">
+                    <div class="flat-left">
+                        <div class="flat-left-top">
+                            <!--
+                                                        <div class="chartBorder">
+                                                            <h3>产线统计</h3>
+                                                            <h4>实验室总数： <strong id="lab_all_count"> 0 </strong></h4>
+                                                            <ul id="pro_line" style="margin-top:10px;">
+                                                            </ul>
+                                                            <div class="myChart"></div>
+                                                        </div>
+                            -->
+                            <div class="chartBorder">
+                                <h3>实验室主要功能分类</h3>
+                                <!--<h4>互联实验室数<strong id="lab_all_count_1">388</strong></h4>-->
+                                <div class="myChart"></div>
+                            </div>
+                        </div>
+                        <div class="flat-left-bottom">
+                            <div class="chartBorder">
+                                <h3>产品生命周期全流程测试</h3>
+                                <h4>P1:对比试验 P2:新品调试 P3:新品确认<br>
+                                    P4:小批验证 入厂/出厂 P5:年度型检 监督抽测"</h4>
+                                <div class="myChart"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mapArea" style="z-index: 999">
+                        <!--平面地图位置-->
+                    </div>
+                    <!--  <div id="maskSphere"></div> -->
+                    <div class="flat-right">
+                        <div class="flat-right-bottom">
+                            <div class="chartBorder">
+                                <h3>覆盖专业领域：5</h3>
+                                <div class="myChart">
+                                    <img src="${contextPath!}/static/img/flatRT.png">
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flat-right-top">
+                            <div class="chartBorder">
+                                <h3>覆盖专业能力：6</h3>
+                                <div class="myChart">
+                                    <!--<img src="${contextPath!}/static/img/flatRT.png">-->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--平面地图下面的导航-->
+                <div class="flat-footer controlBar">
+                    <div class="legend">
+                        <div class="legend-l navSwitch">产线</div>
+                        <div class="legend-r navSwitch">实验室</div>
+                        <div class="selectAll">
+                            <label for="navSelectAll"><span class="icon"></span> 全选</label>
+                            <input id="navSelectAll" checked type="checkbox" class="hidden">
+                        </div>
+                        <div class="labLine">
+                            <ul class="lab" style="display:none;">
+                                ##for(type in labType){
+                                <li class="active" code="${type.id!}"><a href=""><span class="icon"></span>${type.short_name!}</a>
+                                </li>
+                                ##}
+                            </ul>
+                            <ul class="line">
+                                ##for(type in productLine){
+                                <li class="active" code="${type.id!}"><a href=""><span class="icon"></span>${type.short_name!}</a>
+                                </li>
+                                ##}
+                                <!--<li  ><a href=""><span class="icon"></span>其它</a> </li>-->
+                            </ul>
+                        </div>
+
+                        <ul class="legend-bottom">
+                            <li class="active"><a href=""><span class="icon"></span> 中心实验室</a></li>
+                            <li><a href=""><span class="icon"></span> 冰冷</a></li>
+                            <li><a href=""><span class="icon"></span> 洗涤</a></li>
+                            <li><a href=""><span class="icon"></span> 家空</a></li>
+                            <li><a href=""><span class="icon"></span> 商空</a></li>
+                            <li><a href=""><span class="icon"></span> 热水器</a></li>
+                            <li><a href=""><span class="icon"></span> 厨电</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
