--- a/src/main/webapp/layout/ulab.html
+++ b/src/main/webapp/layout/ulab.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="renderer" content="webkit">
-<meta charset="utf-8">
-<title> ${title!'全球实验室互联互通'}</title>
-
-<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
+<meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+<title> ${title!'U-lab全球互联数据中心'}</title>
+<link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
+ <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
+ <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
+ <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
 </head>
 <body class="zh_CN">
 
@@ -15,4 +17,31 @@
 ${layoutContent}
 <!-- 引入公共低 footer-->
 </body>
-</html>   
+<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
+<script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
+<script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
+<script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/common.js?time=New Date()"></script>
+
+<!--屏幕描述
+一共 7x3 个屏幕，
+每一块屏幕是1920x1080
+总共的大小就是13440x3240
+3/7的宽度是5760,
+在笔记本上比例不变适应高度后，宽度为3186px
+-->
+<script>
+var contextPath = '${contextPath!}';
+    var bodyScale = 1;
+    function pageResize() {
+        var h = $(window).height();
+        $("#content").css("width", h * 16 * 7 / (9 * 3));
+        var bodyFontSize = h / 595 * 100 + "%";
+        bodyScale = h / 595;
+        $("body").css("font-size", bodyFontSize);
+        console.log("屏幕高度：" + h + ", body字号：" + bodyFontSize)
+    }
+    pageResize();
+</script>
+</html> 
+  
