--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -40,8 +40,8 @@ h3 {
   display: block;
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  -webkit-margin-start: 0px;
-  -webkit-margin-end: 0px;
+  -webkit-margin-start: 0em;
+  -webkit-margin-end: 0em;
   /*font-weight: bold;*/
 }
 
@@ -117,31 +117,38 @@ video{
   position: relative;
 }
 
-@media screen and (max-width: 960px){
+ @media screen and (min-width: 960px){
   body{
     font-size: 11.2px;
   }
 }
-@media screen and (max-width: 1366px){
+@media screen and (min-width: 1366px){
   body{
-    font-size: 16px;
+    font-size: 8px;
   }
 }
 
-@media screen and (max-width: 1440px){
+@media screen and (min-width: 1440px){
   body{
     font-size: 16.8px;
   }
 }
 
-@media screen and (max-width: 1920px){
+@media screen and (min-width: 1920px){
   body{
     font-size: 22.5px;
   }
 }
 
-@media screen and (max-width: 2560px){
+@media screen and (min-width: 2560px){
   body{
     font-size: 30px;
   }
+} 
+
+@media screen and (min-width: 13440px){
+  body{
+    font-size: 157px;
+  }
 }
+
