--- a/src/main/webapp/layout/tab/tab1.html
+++ b/src/main/webapp/layout/tab/tab1.html
@@ -165,25 +165,40 @@
             <div class="total_bottom">
                 <div class="total_name">数据应用</div>
                 <div class="total_bottom_left">
+                    <div class="echarts_title echarts_title2">量产一致性保障</div>
                     <div class="total_bottom_pie">
                         <div id="myChart8"></div>
                     </div>
+                    <div class="total_bottom_tab">
+                        <ul>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                            <li>模块商1</li>
+                        </ul>
+
+                    </div>
                     <div class="total_bottom_bar1">
-                        <div class="echarts_title echarts_title1">量产一致性对比分析</div>
+                        <!--<div class="echarts_title echarts_title1">量产一致性对比分析</div>-->
                         <div id="myChart9"></div>
                     </div>
-                    <!--<div class="total_bottom_bar2">-->
-                        <!--<div class="echarts_title echarts_title1">量产不一致型号数</div>-->
-                        <!--<div id="myChart10"></div>-->
-                    <!--</div>-->
+                    <div class="total_bottom_bar2">
+
+                        <div id="myChart10"></div>
+                    </div>
 
                 </div>
                 <div class="total_bottom_right">
+                    <div class="echarts_title echarts_title2">共产一致性保障</div>
                     <div class="total_bottom_pie">
                         <div id="myChart11"></div>
                     </div>
                     <div class="total_bottom_bar1">
-                        <div class="echarts_title echarts_title1">共产一致性对比分析</div>
+
                         <div id="myChart12"></div>
                     </div>
                     <!--<div class="total_bottom_bar2">-->
