--- a/src/main/webapp/layout/tab/tab3.html
+++ b/src/main/webapp/layout/tab/tab3.html
@@ -96,7 +96,7 @@
             </div>
             <div class="shuju_result_bottom">
                 <div class="shuju_result_bottom_left">
-                    <div class="shuju_title">订单及时率</div>
+                    <div class="shuju_title1">订单及时率</div>
                     <ul>
                         <li class="order_left">
                             <div class="order_all">
@@ -127,7 +127,7 @@
                     </ul>
                 </div>
                 <div class="shuju_result_bottom_right">
-                    <div class="shuju_title">检测满意度</div>
+                    <div class="shuju_title1">检测满意度</div>
                     <div class="jiance_left">
                         <ul>
                             <li class="order_left">
