--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -10,7 +10,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
 body,html{
   width: 100%;
   height: 100%;
-  font-family: "Microsoft yahei", "微软雅黑", "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, serif;
+  font-family: "Microsoft yahei", "微软雅黑", "Source Sans Pro", "Helvetica Neue", 'Helvetica', 'Arial',sans-serif;
 }
 fieldset, img {
   border: 0;
