--- a/src/main/webapp/static/css/index_right.css
+++ b/src/main/webapp/static/css/index_right.css
@@ -152,7 +152,10 @@
     width: 53%;
     margin-top: 7%;
 }
-
+.echarts_title2{
+    margin-top: 4%;
+    width:33%;
+}
 #myChart1 {
     width: 80%;
     height: 63%;
@@ -192,7 +195,7 @@
     width:70%;
     height: 40%;
     /*  height: 1em;*/
-    border-radius: 3px;
+    border-radius: 2px;
     border: 1px solid #66ccff;
     margin-bottom: 1%;
     background-color: transparent;
@@ -221,22 +224,27 @@
 
 .total_top_2_box > ul > li .progress .progress-bar1 {
     background-color: #66ccff;
+    border-radius: 2px;
 }
 
 .total_top_2_box > ul > li .progress .progress-bar2 {
     background-color: #66ccff;
+    border-radius: 2px;
 }
 
 .total_top_2_box > ul > li .progress .progress-bar3 {
     background-color: #66ccff;
+    border-radius: 2px;
 }
 
 .xueli > ul > li .progress {
-    border: 1px solid  #66ccff;;
+    border: 1px solid  #66ccff;
+    border-radius: 2px;
 }
 
 .zizhi > ul > li .progress {
     border: 1px solid #66ccff;
+    border-radius: 2px;
 }
 
 .total_top_3 .total_top_3_left {
@@ -278,11 +286,12 @@
 
 .total_top_3_left > ul li:last-of-type {
     color: #ff9933;
-    font-size: 1.6em;
+    font-size: 1.4em;
 }
 
 #myChart3 {
-    width: 95%;
+    padding-left: 2%;
+    width: 98%;
     height: 63%;
     /*background-color: pink;*/
 }
@@ -313,23 +322,29 @@
 .total_center {
     display: flex;
     flex-direction: row;
+    padding-left: 1%;
+    /*padding-right: 2%;*/
 }
 
 .total_center_1 {
     flex: 1;
+    width: 20%;
     position: relative;
 }
 
 .total_center_2 {
     flex: 1;
+    width: 20%;
 }
 
 .total_center_3 {
     flex: 1;
+    width: 20%;
 }
 
 .total_center_4 {
     flex: 1;
+    width: 20%;
 }
 
 .echarts_title_left {
@@ -342,7 +357,7 @@
 
 
 #myChart4 {
-    width: 66%;
+    width: 64%;
     height: 70%;
     float: left;
 }
@@ -353,7 +368,8 @@
     margin-top: 25%;
     /*margin-left: 15%;*/
     /*background-color: plum;*/
-    margin-left: 5%;
+    margin-left:10%;
+    font-size: 1.2em;
 }
 
 .echarts_title_left ul li {
@@ -362,7 +378,7 @@
 
 .echarts_title_left ul span {
     color: #ff9933;
-    font-size: 160%;
+    font-size: 1.4em;
 }
 
 #myChart5 {
@@ -397,28 +413,52 @@
 }
 
 .total_bottom_pie {
-    width: 26%;
-    height: 80%;
+    width: 28%;
+    height: 65%;
     /*background-color: yellow;*/
     float: left;
 }
 
 .total_bottom_bar1,.total_bottom_bar2 {
-    width: 70%;
-    height: 100%;
+    width: 31%;
+    height: 65%;
     float: left;
 }
+.total_bottom_tab{
+    width: 9%;
+    height: 65%;
+    float: left;
+    background-color: transparent;
+    margin-right: 1%;
 
+}
+.total_bottom_tab ul {
+    width: 100%;
+    height: 95%;
+    overflow-y: scroll;
+    padding-top: 11%;
+    background: url("../img/TotalState/scroll bar-border.png") no-repeat;
+    background-size: 100% 100%;
+}
+.total_bottom_tab ul li{
+    width: 100%;
+    height: 20%;
+    display: inline-block;
+    color: #66CCFE;
+    font-size: 1em;
+}
+.total_bottom_right .total_bottom_bar1{
+    width: 70%;
+}
 
 #myChart8,#myChart11 {
-    margin-top: 12%;
     width: 100%;
     height: 100%;
 }
 
 #myChart9,#myChart10,#myChart12,#myChart13 {
     width: 100%;
-    height: 60%;
+    height: 100%;
 }
 
 /*设施状态*/
@@ -444,10 +484,10 @@
 }
 .sheshi_title{
     position:absolute;
-    top:0.5%;
-    left:3.5%;
+    top:0;
+    left:3%;
     color: white;
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
 .sheshi_top_left{
     flex: 1;
@@ -563,13 +603,18 @@
     display: inline-block;
     text-align: center;
     margin: 0 auto;
+    font-size: 1.2em;
 }
 #myChart22,#myChart23,#myChart24{
-    width:60%;
+    margin: 0 auto;
+    width:50%;
     height:4.5em;
 }
+#myChart23{
+    width: 100%;
+}
 #myChart24{
-    width: 70%;
+    width: 100%;
 }
 .sheshi_top_rihght .renyuan_bottom{
     height: 64%;
@@ -586,7 +631,7 @@
     margin: 0 auto;
 }
 #myChart25,#myChart26,#myChart27{
-    width: 90%;
+    width: 100%;
     height: 100%;
     background-color: #00aaff;
 }
@@ -598,6 +643,7 @@
     position:relative;
     padding-top: 2%;
     color: #66CCFE;
+    font-size: 1.2em;
 }
 .sheshi_bottom_left .biaozhun_left{
     width: 34%;
@@ -642,6 +688,7 @@
     padding-top: 2%;
     color: #66CCFE;
     font-size: 1.2em;
+
 }
 .sheshi_bottom_right .nengli_top{
     width: 100%;
@@ -651,7 +698,7 @@
     width: 85%;
     height: 100%;
     margin: 0 auto;
-    background: url("../img/sheshiState/nl-bg.png") no-repeat;
+    background: url("../img/sheshiState/nengli-name.png") no-repeat;
     background-size: 100% 100%;
     margin-top: 1%;
 }
@@ -660,9 +707,9 @@
     height: 100%;
     line-height: 100%;
     float: left;
-    font-size: 1.3em;
     color: white;
-    padding-top: 2%;
+    padding-top: 3%;
+    padding-left: 2%;
 }
 .nengli_bottom{
     width: 100%;
@@ -677,12 +724,18 @@
     height: 100%;
     float: left;
 }
+.nengli_bottom ul li{
+    width: 13%;
+}
+.nengli_bottom ul li:first-of-type{
+    width: 19%;
+}
 #myChart32,#myChart33,#myChart34,#myChart35,#myChart36,#myChart37,#myChart38{
     width: 100%;
     height: 100%;
 }
 #myChart39,#myChart40,#myChart41,#myChart42,#myChart43,#myChart44,#myChart45,#myChart46,#myChart47,#myChart48,#myChart49 {
-    width: 85%;
+    width: 95%;
     height: 100%;
     background-color: #00aaff;
 }
@@ -748,11 +801,16 @@
 }
 .shuju_title{
     position: absolute;
-    top: 0.5%;
-    left: 2.5%;
-    font-size: 1.1em;
+    top: 0;
+    left: 1%;
+    font-size: 1.2em;
 }
-
+.shuju_title1{
+    position: absolute;
+    top: 0;
+    left: 2.5%;
+    font-size: 1.2em;
+}
 .shuju_result_top_center{
     flex: 1;
     background: url("../img/sheshiState/border .png") no-repeat;
