修改左边页面

--- a/src/main/webapp/layout/left.html
+++ b/src/main/webapp/layout/left.html
@@ -5,8 +5,14 @@
             <h1>Haier U-lab Data Center</h1>
         </header>
         <div class="btnGroup">
-            <img class="sphere" src="${contextPath!}/static/img/ico/btn_sphere_on.png">
-            <img class="sphere" src="${contextPath!}/static/img/ico/btn_flat_off.png">
+            <span class="oneBtn">
+                <span class="sphere-btnTip">地球</span>
+                <img class="sphere" src="${contextPath!}/static/img/ico/btn_sphere_on.png">
+            </span>
+            <span class="oneBtn">
+                <span class="flat-btnTip">平面</span>
+                <img class="sphere" src="${contextPath!}/static/img/ico/btn_flat_off.png">
+            </span>
         </div>
         <div class="switchGroup">
             <div class="switch sphere">
@@ -32,7 +38,7 @@
                     </div>
                 </div>
                 <div class="mapArea">
-                    <h2>数据互联 实时共享 提效增值</h2>
+                    <h2>数据互联&emsp;&emsp;实时共享&emsp;&emsp;提效增值</h2>
                     <!--球体地图位置-->
                     <iframe src="${contextPath!}/lab/sphereMap"></iframe>
                 </div>
@@ -105,8 +111,10 @@
                         <div class="flat-left-bottom">
                             <div class="chartBorder">
                                 <h3>产品生命周期全流程测试</h3>
+<!--
                                 <h4>P1:对比试验 P2:新品调试 P3:新品确认<br>
                                     P4:小批验证 入厂/出厂 P5:年度型检 监督抽测"</h4>
+-->
                                 <div class="myChart"></div>
                             </div>
                         </div>
@@ -120,7 +128,7 @@
                             <div class="chartBorder">
                                 <h3>覆盖专业领域：5</h3>
                                 <div class="myChart">
-                                    <img src="${contextPath!}/static/img/flatRT.png">
+                                    <img src="${contextPath!}/static/img/flatRT_text.png">
 
                                 </div>
                             </div>
